# Cirro-client

./: .gitignore  .sonarcloud.properties  LICENSE.txt  README.md  main.py  make_docs.py  openapitools.json  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  test.py
.github/workflows/: docs.yml  lint.yml  package.yml
.run/: cli.run.xml
cirro/: __init__.py  cirro_client.py  config.py  file_utils.py  utils.py
cirro/api/: __init__.py  config.py
cirro/auth/: __init__.py  access_token.py  base.py  device_code.py  oauth_models.py
cirro/cli/: __init__.py  cli.py  controller.py  models.py
cirro/clients/: __init__.py  s3.py
cirro/helpers/: __init__.py  _pyodide_patch_httpx.py  _pyodide_patch_requests.py  constants.py  developer.py  form.py  preprocess_dataset.py  pyodide_patch_file.py  pyodide_patch_httpx.py  references.py  workflow_config.py
cirro/models/: assets.py  dataset.py  file.py  form_specification.py  process.py  reference.py  s3_path.py  tenant.py  workflow_models.py
cirro/sdk/: __init__.py  asset.py  dataset.py  developer.py  file.py  helpers.py  login.py  notebooks.py  portal.py  process.py  project.py  reference.py  reference_type.py
cirro/services/: __init__.py  base.py  billing.py  compute_environment.py  dataset.py  execution.py  file.py  metadata.py  metrics.py  process.py  projects.py  references.py  service_helpers.py  share.py  user.py
pubweb/: __init__.py  auth.py  config.py  data_client.py  file_utils.py  pubweb.py  rest_client.py  utils.py
pubweb/api/: __init__.py  config.py
pubweb/auth/: __init__.py  base.py  iam.py  oauth_client.py  username.py
pubweb/cli/: __init__.py  arguments.py  cli.py  controller.py  models.py  questions.py  records.py  utils.py
pubweb/clients/: __init__.py  api.py  data.py  rest.py  s3.py  utils.py
pubweb/dataset/: __init__.py  manifest.py  models.py  sync.py
pubweb/helpers/: __init__.py  constants.py  file_validation.py  form.py  portal.py  preprocess_dataset.py  schema_helpers.py  workflow.py  workflow_config.py
pubweb/models/: api.py  auth.py  dataset.py  file.py  form_specification.py  process.py  project.py  reference.py  s3_path.py  workflow_models.py
pubweb/sdk/: __init__.py  asset.py  dataset.py  exceptions.py  file.py  helpers.py  portal.py  process.py  project.py  reference.py  reference_type.py
pubweb/services/: __init__.py  base.py  common.py  dataset.py  file.py  process.py  project.py  workflow.py
samples/: 01_Intro.ipynb  02_Uploading_a_dataset.ipynb  03_Downloading_a_dataset.ipynb  04_Analyzing_a_dataset.ipynb  04_Interacting_with_files.ipynb  05_Analyzing_a_dataset.ipynb  05_Using_references.ipynb  06_Using_references.ipynb  Advanced_usage.ipynb  Analyzing_a_dataset.ipynb  Downloading_a_dataset.ipynb  Getting_started.ipynb  Integrating_pipelines.ipynb  Interacting_with_files.ipynb  Logging_In.ipynb  Making_notebooks_reusable.ipynb  Uploading_a_dataset.ipynb  Using-R.ipynb  Using_references.ipynb
tests/: test_config_load.py  test_dataset_types.py  test_file_utils.py  test_notebook_automation.py  test_preprocess.py  test_process_definition.py  test_reference_helpers.py
(+114 files in other folders)
