[tool.poetry]
name = "cirro"
version = "1.6.0"
description = "CLI tool and SDK for interacting with the Cirro platform"
authors = ["Cirro Bio <support@cirro.bio>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CirroBio/Cirro-client"
packages = [{include = "cirro"}]

[tool.poetry.dependencies]
python = ">3.9.1,<4.0"
attrs = ">=21.3.0"
cirro_api_client = "1.0.3"
click = "^8.1.3"
boto3 = "~=1.38"
questionary = "^2.0.1"
requests = "^2.32.0"
tqdm = "^4.62.3"
jsonschema = "^4.21.1"
pandas = "^2.2.0"
s3fs = "2025.7.0"
pyjwt = "^2.10.0"
msal-extensions = "^1.0.0"
requests-aws4auth = {version="1.3.1", optional=true}
miniwdl = {version="^1.13.0", optional=true}
referencing = "^0.36.2"
nf-core = {version = "^3.3.2", optional=true}
awscrt = "==0.27.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "*"
flake8 = "*"
pdoc = "15.0.0"

[tool.poetry.extras]
pyodide = ["requests-aws4auth"]
wdl = ["miniwdl"]
nextflow = ["nf-core"]

[tool.poetry.scripts]
cirro-cli = "cirro.cli.cli:main"
cirro = "cirro.cli.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
